k8s/overlays/dev-full/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aquashield-dev
  labels:
    istio-injection: enabled
