k8s/overlays/dev-full/allow-gclb-health-checks.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-gclb-health-checks
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: aquashield
  policyTypes:
    - Ingress
  ingress:
    - from:
        - ipBlock:
            cidr: 35.191.0.0/16
        - ipBlock:
            cidr: 130.211.0.0/22
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 8087
        - protocol: TCP
          port: 8088
        - protocol: TCP
          port: 8089
        - protocol: TCP
          port: 8090
        - protocol: TCP
          port: 8092
